app/assets/stylesheets/custom.css.scss
/* ... */
.btn-outlined.btn-theme:hover,
.btn-outlined.btn-theme:active {
    color: #FFF;
    background: #6f5499;
    border-color: #6f5499;
}

.btn-sm{
  font-size:12px;
  line-height:16px;
  border: 2px solid;
  border-radius: 89;
  padding:8px 15px;
}

#fat-menu {
  padding-left: 15px;
}

.navbar-inverse .nav > li > a {
  color: #6f5499;
  /* text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); */
}

/* Rectangle 2: */
.sign-up {
  opacity: 0.74;
  background: #7B80A2;
  border: 1px solid #979797;
  width: 400px;
  margin-left: 650px;
  margin-top: -20px
}

.edit-user {
  opacity: 0.74;
  background: #7B80A2;
  border: 1px solid #979797;
  width: 400px;
  margin-left: auto;
  margin-right: auto;
}

.blue {
opacity: 0.90;
background: #315565;
border: 3px solid #979797;
padding-top: 30px;
padding-right: 30px;
padding-bottom: 30px;
padding-left: 30px;
}

.whiteHIW {
  background-color: #fff;
  opacity: .85;
  padding-top: 30px;
  padding-bottom: 30px;
}

p.HIWfont {
  padding-top: 25px;
  margin-bottom: 40px;
  font-size: 16px;
  line-height: 24px;
  padding-left: 20px;
  padding-right: 20px;
}

p.faq {
  font-size: 40px;
  padding: 20px;
  line-height: 40px;
  color: #E8DCE1;
  padding: 30px;
}

p.answer {
  font-size: 20px;
  color: red;
  padding: 10px;
  line-height: 130%;
}

h1.arrow { font-size: 55px;
  text-transform: uppercase;
  color: #E8DCE1;
  letter-spacing: 1px;
  padding-bottom: 30px;
  font-weight: bold;
}

h1.arrow2 { font-size: 55px;
  text-transform: uppercase;
  color: #315565;
  letter-spacing: 1px;
  padding-bottom: 30px;
  font-weight: bold;
}


.btn-outlined.btn-white {
    background: none;
    color: #FFFFFF;
  border-color: #FFFFFF;
}

.btn-outlined.btn-white:hover,
.btn-outlined.btn-white:active {
    color: #6f5499;
    background: #FFFFFF;
    border-color: #FFFFFF;
}

.depositCredits {
  color: black;
  font-size: 18px;
}

.depositCreditsButton {

}

#creditsField {
  width: 180px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
}

#depositTheCredits {
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;

}

/* deposit credits page */

.moneyPot {
  height: 400px;
  width: 400px;
  background: url(jackpot.svg) no-repeat center center;
  margin-left: auto;
  margin-right: auto;
}

/*logo
.logoIcon {
  height: 60px;
  width: 52px;
  background: url(homelogo.png) no-repeat center center;
  margin-left: auto;
  margin-right: auto;

}

*/

/*homepage game div fonts*/

.gameCover {
  font-size: 36px;
  color: #fff;
  padding-top: 70px;
}

.earnCredits {
  font-size: 20px;
  color: red;
  margin-top: 45px;
}

/*sign up*/

.span5 {
  padding-left: 10px;
}

#user_name, #user_email, #user_zipcode, #user_password, #user_password_confirmation {
  width: 250px;
  margin: 10px;
  font-size: 24px;
  line-height: 35px;
}

#user_dob_2i {
  width: 105px;
}

#user_dob_3i {
  width: 55px;
}

#user_dob_1i {
  width: 80px;
}

.obscure {
  position: absolute !important;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
}

.genderButtonLeft {
  width: 100px;
  display: inline;
  float: left;
  margin-left: 110px;
}

.genderButtonRight {
  width: 100px;
  display: inline;
  float: right;
  margin-right: 80px;
}

.termsOfService {
  font-size: 10px;
  color: #3A4172;
}

.welcomeBox {
  background: #3A4172;
  border: 1px solid #979797;
  color: #fff;
  height: 70px;
  width: 200px;
  line-height: 65px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 15px;
  margin-bottom: 10px;
  font-size: 32px;
}
.cash-out{
  ul{
    padding:0px;
    margin:0px;
    list-style-type:none;
  }
  li{
    padding:30px;
    font-size:40px;
    position:relative;
    border-bottom: 1px solid #000;
    .cost{
      position:absolute;
      right:0px;
      color:red;
    }
  }
}

/*body {
  background: url(background_decent.svg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  height: 100%;
  background-color: #AADDD6;
  color: #AADDD6;
  text-align: center;
  background-position: 0 0; */

